[tool.poetry]
name = "wristwatch"
version = "0.1.0"
description = "tick tock"
authors = ["justletterh <63440442+justletterh@users.noreply.github.com>"]
license = "unlicense"
packages = [
    { include = "main.py" },
]

[tool.poetry.dependencies]
python = "^3.8"
num2words = "^0.5.10"
roman = "^3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run = "main:init"